# wos-gibtsn-heid

./: .mcpbignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix  manifest.json
.github/workflows/: buid-and-deploy.yml  build-and-deploy.yml  rust.yml
src/: cli.rs  main.rs  preferences.rs
src/abbreviations/: allergens.rs  indicators.rs  ingredients.rs  locations.rs  mod.rs
src/tool/: loc.rs  loc_test.rs  menu_data.rs  mod.rs  router.rs
