[package]
name = "mcp-wos-gibtsn-heid"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.41"
clap = { version = "4.5.46", features = ["derive"] }
csv = "1.3.1"
indexmap = "2.11.0"
once_cell = "1.21.3"
openssl = { version = "0.10.73", features = ["vendored"] }
reqwest = "0.12.23"
rmcp = { version = "0.6.1", features = ["server"] }
serde = "1.0.219"
serde_json = "1.0.143"
strum = "0.27.2"
strum_macros = "0.27.2"
tokio = { version = "1.47.1", features = ["full"] }
